Implement game logic

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="./assets/scss/style.scss" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <button name="play" type="button">New Game</button>
+    <section class="player__board player__board--human">
+      <h2 class="player__type">Player</h2>
+      <h3 class="player__score">Score: 0</h3>
+    </section>
+    <ul class="cards"></ul>
+    <section class="player__board player__board--computer">
+      <h2 class="player__type">Computer</h2>
+      <h3 class="player__score">Score: 0</h3>
+    </section>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
