--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory</title>
+    <title>Memory Game</title>
+    <meta
+      name="description"
+      content="A Japan themed Memory game to play against the computer, built in vanilla JavaScript as a learning project."
+    />
     <link rel="stylesheet" href="./assets/scss/style.scss" />
   </head>
   <body>
-    <button name="play" type="button">New Game</button>
-    <section class="player__board player__board--human">
-      <h2 class="player__type">Player</h2>
-      <h3 class="player__score">Score: 0</h3>
-    </section>
-    <ul class="cards"></ul>
-    <section class="player__board player__board--computer">
-      <h2 class="player__type">Computer</h2>
-      <h3 class="player__score">Score: 0</h3>
-    </section>
+    <main>
+      <header class="newgame">
+        <h1>Memory Game</h1>
+        <button class="newgame__button" name="play" type="button">
+          New Game
+        </button>
+      </header>
+      <section class="player__board player__board--human">
+        <h2 class="player__type">Player</h2>
+        <h3 class="player__score">Score: 0</h3>
+      </section>
+      <section class="player__board player__board--computer">
+        <h2 class="player__type">Computer</h2>
+        <h3 class="player__score">Score: 0</h3>
+      </section>
+      <ul class="cards"></ul>
+      <section class="endgame">
+        <h2 class="endgame__status"></h2>
+      </section>
+    </main>
+    <footer>
+      <p>
+        Designed & developed by
+        <a href="https://www.marcfairbrother.com">Marc Fairbrother</a>
+      </p>
+      <p>
+        Illustrations sourced from
+        <a href="https://www.svgrepo.com/collection/japan-15/">SVG Repo</a>
+      </p>
+      <p>
+        Source code hosted on
+        <a href="https://github.com/MarcFairbrother/memory">GitHub</a>
+      </p>
+      <p>🧙 Website hosted and deployed by Netlify wizardry</p>
+      <p>
+        Netlify, Inc.<br />
+        2325 3RD STREET,SUITE 215, SAN FRANCISCO, CA 94107 (USA)<br />
+        privacy@netlify.com<br />
+        www.netlify.com<br />
+        +1 844-899-7312
+      </p>
+    </footer>
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
