--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         Source code hosted on
         <a href="https://github.com/MarcFairbrother/memory">GitHub</a>
       </p>
-      <p>🧙 Website hosted and deployed by Netlify wizardry</p>
+      <p>🧙 Website hosted and deployed with Netlify wizardry</p>
       <p>
         Netlify, Inc.<br />
         2325 3RD STREET,SUITE 215, SAN FRANCISCO, CA 94107 (USA)<br />
