--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="A Japan themed Memory game to play against the computer, built in vanilla JavaScript as a learning project."
     />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/scss/style.scss" />
   </head>
   <body>
