Changed prettier config to have longer lines

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,7 @@
     <main>
       <header class="newgame">
         <h1>Memory Game</h1>
-        <button class="newgame__button" name="play" type="button">
-          New Game
-        </button>
+        <button class="newgame__button" name="play" type="button">New Game</button>
       </header>
       <section class="player__board player__board--human">
         <h2 class="player__type">Player</h2>
